fix: view-width out of screen bounds bug solved

--- a/styles/css/search/vtex.search-result.css
+++ b/styles/css/search/vtex.search-result.css
@@ -1,4 +1,7 @@
 /* Product Summary Shelf styles */
+.gallery{
+  margin: 0;
+}
 
 .galleryItem {
   margin    : 30px 0;
